[tool.poetry]
name = "strawberry-django-jwt"
version = "0.2.0"
description = "Strawberry-graphql port of the graphene-django-jwt package"
license = "MIT"
authors = ["Vojtěch Dohnal <vojdoh@gmail.com>"]
maintainers = []
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Django',
    'Framework :: Django :: 3.2',
    'Framework :: Django :: 4.0',
]
packages = [
    { include = "strawberry_django_jwt" }
]

[tool.poetry.dependencies]
python = "^3.7"
Django = [
    { version = ">=3.2,<4", markers = "python_version < '3.8'", optional = true },
    { version = ">=3.2,<5", markers = "python_version >= '3.8'", optional = true }
]
PyJWT = ">=1.7.1,<3.0"
strawberry-graphql = ">=0.69.0,<1.0.0"
strawberry-graphql-django = { version = ">=0.2.5,<4.0", allow-prereleases = true }
django-admin-display = "^1.3.0"
packaging = ">=20.0,<30.0"
importlib-metadata = { version = "^1.7.0", python = "<=3.7" }

[tool.poetry.dev-dependencies]
cryptography = "^37.0"
coverage = "^6.3"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-django = "^4.0.0"
types-cryptography = "^3.3.15"
django-stubs = "^1.9.0"
django-mock-queries = "^2.1.7"
types-mock = "^4.0.0"
types-jwt = "^0.1.0"
types-pkg-resources = "^0.1.0"
djangorestframework-stubs = "^1.4.0"
djangorestframework = "^3.12.4"

# For use in local tests and development
uvicorn = { extras = ["standard"], version = "^0.17.0", optional = true }
nox-poetry = { version = "^0.9.0", optional = true }
nox = { version = "^2022.1.7", optional = true }
pylint = { version = "^2.12.2", optional = true }

# For use in CI and local development
autopep8 = { version = "^1.1", optional = true }
darglint = { version = "^1.5.0", optional = true }
mypy = { version = "^0.950", optional = true }
safety = { version = "^1.0", optional = true }
pre-commit = { version = "^2.15.0", optional = true }
pre-commit-hooks = { version = "^4.0.0", optional = true }

[tool.poetry.extras]
dev = ["uvicorn", "nox-poetry", "nox", "pre-commit", "pre-commit-hooks", "autopep8", "darglint", "mypy", "safety", "pylint"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.example_app.settings"
python_files = "tests.py test_*.py *_tests.py"
filterwarnings = [
    "ignore:`is_unset` is deprecated use `value is UNSET` instead:DeprecationWarning",
    "ignore:importing `UNSET` from `strawberry.arguments` is deprecated, import instead from `strawberry` or from `strawberry.unset`:DeprecationWarning",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/KundaPanda/strawberry-django-jwt/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
